--- a/main.css
+++ b/main.css
@@ -165,9 +165,7 @@ a:hover{
 }
 .pg4>p{
     font-size: 20px;
-    padding-left: 50px;
-    padding-right: 50px;
-    padding-bottom: 50px;
+    padding: 50px;
     font-family: 'Quicksand', sans-serif;
 }
 .instagram{
