--- a/main.css
+++ b/main.css
@@ -198,6 +198,207 @@ footer{
     font-size: 20px;
     font-family: 'Quicksand', sans-serif;
 }
+@media (max-device-width:810px){
+    @keyframes arrow1 {
+        from{
+            top: 1000px;
+        }
+        to {
+            top: 990px;
+        }
+        
+    }
+    @keyframes arrow2 {
+        from{
+            bottom: -50px;
+        }
+        to {
+            bottom: -60px;
+        }
+    }
+        body{
+            max-width: 810px;
+        }
+        .start{
+            background-image: url(/watermelonsugar/images/harry360.png);
+            max-width: 810px;
+            padding-bottom: 1020px;
+        }
+        .starttitle{
+            font-size: 60px;
+            position: relative; left: 130px; bottom: 700px;
+            max-width: 500px;
+        }
+        .start>a{
+            position: relative; left: 365px;
+            max-width: 100px;
+        }
+        .page1{
+            max-width: 810px;
+            position: relative; bottom: 265px;
+        }
+        .pg1head{
+            font-size: 50px;
+            padding-top: 40px;
+        }
+        .about{
+            position: relative; left: 140px;
+            font-size: 40px;
+            padding-bottom: 200px;
+            max-width: 500px;
+        }
+        #pg2{
+            max-width: 810px;
+            padding: 20px;
+            padding-bottom: 350px;
+            position: relative; bottom: 285px;
+        }
+        .spotify{
+            position: relative; left: 50px; top: 70px;
+        }
+        .applemusic{
+            position:relative; top: 55px; left: 100px;
+        }
+        .saavn{
+            position: relative; top: 125px; right: 45px;
+        }
+        .deezer{
+            position: relative; top: 100px; left: 10px;
+        }
+        .tidal{
+            position: relative; top: 350px; right: 240px;
+        }
+        .pg2h1{
+            font-size: 60px;
+            padding-top: 50px;
+            padding-bottom: 50px;
+        }
+        iframe{
+            max-width: 600px;
+            position: relative; top: 100px;
+        }
+        .pg3{
+            max-width: 810px;
+            padding-bottom: 430px;
+        }
+        .pg3h1{
+            font-size: 60px;
+            padding-top: 50px;
+            padding-bottom: 50px;
+        }
+        .pg4{
+            background-image: url(/watermelonsugar/images/harryimage.jpg);
+            max-width: 810px;
+        }
+        .pg4>h1{
+            font-size: 60px;
+            max-width: 500px;
+            position: relative; left: 120px;
+        }
+        .pg4>p{
+            text-align: center;
+            padding: 50px;
+            font-size: 25px;
+        }
+        footer{
+            max-width: 810px;
+        }
+}
+@media (max-device-width: 428px){
+    body{
+        max-width: 428px;
+    }
+    .start{
+        background-image: url(/watermelonsugar/images/harry360.png);
+        max-width: 428px;
+        padding-bottom: 935px;
+    }
+    .starttitle{
+        font-size: 30px;
+        position: relative; left: 60px; bottom: 650px;
+        max-width: 250px;
+    }
+    .start>a{
+        position: relative; left: 180px;
+        max-width: 100px;
+    }
+    .page1{
+        max-width: 520px;
+    }
+    .pg1head{
+        font-size: 30px;
+        padding-top: 40px;
+    }
+    .about{
+        position: relative; left: 75px;
+        font-size: 20px;
+        padding-bottom: 340px;
+        max-width: 250px;
+    }
+    #pg2{
+        max-width: 428px;
+        padding: 20px;
+        padding-bottom: 150px;
+    }
+    .spotify{
+        position: relative; left: 20px; top: 20px;
+    }
+    .applemusic{
+        position:relative; top: 50px; left: 20px;
+    }
+    .saavn{
+        position: relative; top: 10px; left: 20px;
+    }
+    .deezer{
+        position: relative; top: 40px; left: 20px;
+    }
+    .tidal{
+        position: relative; top: 290px; left: 20px;
+    }
+    .pg2h1{
+        font-size: 40px;
+        padding-top: 50px;
+        padding-bottom: 50px;
+        position: relative; left: 20px;
+    }
+    iframe{
+        max-width: 250px;
+    }
+    .pg3{
+        max-width: 428px;
+        padding-bottom: 300px;
+    }
+    .pg3h1{
+        font-size: 40px;
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+    .pg4{
+        background-image: url(/watermelonsugar/images/harryimage360.jpg);
+        max-width: 428px;
+    }
+    .pg4>h1{
+        font-size: 40px;
+        max-width: 360px;
+    }
+    .pg4>p{
+        text-align: left;
+        padding: 50px;
+        font-size: 15px;
+    }
+    .instagram{
+        position: relative; left: 5px;
+    }
+    .twitter{
+        position: relative; left: -2px;
+    }
+    .facebook{
+        position: relative; left: -1px;
+    }
+    footer{
+        max-width: 428px;
+    }
+}
 @media (max-device-width: 412px){
     body{
         max-width: 412px;
