--- a/main.css
+++ b/main.css
@@ -92,7 +92,7 @@ h1{
     background-size: cover;
 }
 .about{
-    font-family: 'Dancing Script', cursive;
+    font-family: 'Quicksand', sans-serif;
     font-size: 27px;
     font-weight: 500;
 
