--- a/main.css
+++ b/main.css
@@ -380,6 +380,7 @@ footer{
     }
     .pg4>h1{
         font-size: 40px;
+        position: relative; left: 5px;
         max-width: 360px;
     }
     .pg4>p{
@@ -476,6 +477,7 @@ footer{
     .pg4>h1{
         font-size: 40px;
         max-width: 360px;
+        position: relative; left: 5px;
     }
     .pg4>p{
         text-align: left;
@@ -572,6 +574,7 @@ footer{
     .pg4>h1{
         font-size: 40px;
         max-width: 360px;
+        position: relative; left: 5px;
     }
     .pg4>p{
         text-align: left;
@@ -759,6 +762,7 @@ footer{
     .pg4>h1{
         font-size: 40px;
         max-width: 360px;
+        position: relative; left: 5px;
     }
     .pg4>p{
         text-align: left;
@@ -855,6 +859,7 @@ footer{
     .pg4>h1{
         font-size: 40px;
         max-width: 360px;
+        position: relative; left: 5px;
     }
     .pg4>p{
         text-align: left;
@@ -950,6 +955,7 @@ footer{
     .pg4>h1{
         font-size: 40px;
         max-width: 360px;
+        position: relative; left: 5px;
     }
     .pg4>p{
         text-align: left;
@@ -1045,6 +1051,7 @@ footer{
     .pg4>h1{
         font-size: 40px;
         max-width: 360px;
+        position: relative; left: 5px;
     }
     .pg4>p{
         text-align: left;
